--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "t_deps/modules/testdataparser"]
 	path = t_deps/modules/testdataparser
 	url = git://github.com/wakaba/testdataparser.git
+[submodule "modules/web-useragent-functions"]
+	path = modules/web-useragent-functions
+	url = git://github.com/wakaba/perl-web-useragent-functions
